...
        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PillsPickerView" customModule="TakeUrPill" customModuleProvider="target">
            <rect key="frame" x="0.0" y="0.0" width="375" height="274"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tee-vb-3zs">
                    <rect key="frame" x="313" y="20" width="46" height="30"/>
                    <accessibility key="accessibilityConfiguration" label="done"/>
                    <state key="normal" title="Button"/>
                    <connections>
                        <action selector="doneButtonPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="jhz-uA-uI6"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ai3-uR-i9X">
...
